--- a/index.html
+++ b/index.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <title>TP1 Vue.js</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+	<title>Domotique</title>
 </head>
 <body>
-    <div id="app">
-        <h1>TP Majuscule</h1>
-        <p>Saisir un mot et le mettre en majuscule.</p>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12">
 
-        <input v-model="info">
-	    <h3>{{ info2 }}</h3>
-        <button @click="uppercase()"> GO </button>
-        
-    </div>
+				<h2>Les Appareils</h2>
+				<ul class="list-group">
+					<li 
+					class="list-group-item list-group-item-success"
+					>
+						<h4> TV -- Allumé</h4>
+						<button class="btn btn-success"> ON</button>
+						<button  class="ml-2 btn btn-danger"> OFF</button> 
+					</li>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script>
-        const app = new Vue({
-            el:'#app',
-            data :{
-                info:'',
-                info2:''
-            },
-            methods:
-            {
-                uppercase(){
-                    this.info2 = this.info.toUpperCase();
-                },
-            }
-            
+					<li 
+					class="list-group-item list-group-item-danger"
+					>
+						<h4> Xbox -- Etteind</h4>
+						<button class="btn btn-success"> ON</button>
+						<button  class="ml-2 btn btn-danger"> OFF</button> 
+					</li>
 
-        })
-</script>
+					<li 
+					class="list-group-item list-group-item-success"
+					>
+						<h4> PlayStaion -- allumé</h4>
+						<button class="btn btn-success"> ON</button>
+						<button  class="ml-2 btn btn-danger"> OFF</button> 
+					</li>
+
+
+			</ul>
+			<br>
+			<button class="btn btn-success">ALL ON</button>
+
+			<button  class="ml-2 btn btn-danger">ALL OFF</button>
+		</div>
+	</div>
+</div>
 </body>
 </html>
